feat: add id container

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helpers</title>
-    <script src="./src/helpers/api.js"></script>
+    <script src="./src/helpers/innerhtml.js"></script>
 </head>
 <body>
     <div id="container"></div>
+
 </body>
 </html>
